# safeffi_no_std_test

./: .gitignore  Cargo.toml  Makefile  build.rs
cmath/: Makefile  build.sh  cmath.c  cmath.h
src/: lib.rs  main.rs
