[package]
name = "safeffi_no_std_test"
version = "0.1.0"
edition = "2018"
categories = ["no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2", default-features = false }

[lib]
name = "example_no_std_crate"
path = "src/lib.rs"

[[bin]]
name = "example_no_std"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"